# MonopolyEngine

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Monopoly TXT.cpp  Monopoly TXT.h
src/assets/: colors.h  contants.h  playerPeices.cpp  playerPeices.h  playerPieces.cpp  playerPieces.h
src/engine/: engine.cpp  engine.h
src/engine/match/: match.cpp  match.h
src/engine/round/: round.cpp  round.h
src/engine/turn/: turn.cpp  turn.h
src/io/: controller.cpp  controller.h  viewPort.cpp  viewPort.h
src/models/block/: block.cpp  block.h
src/models/board/: board.cpp  board.h
src/models/die/: die.cpp  die.h
src/models/player/: player.cpp  player.h
